# obs-record

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: spotlight.effect
docs/: manual-test-checklist.md
docs/superpowers/plans/: 2026-07-06-obs-record-implementation.md
docs/superpowers/specs/: 2026-07-06-obs-record-design.md
scripts/: hyprland-binds.conf  obs-record-cli
src/: commands.cpp  commands.h  control-server.cpp  control-server.h  cursor-tracker.cpp  cursor-tracker.h  effects-state.cpp  effects-state.h  filter.cpp  filter.h  geometry.h  hypr-ipc.cpp  hypr-ipc.h  input-listener.cpp  input-listener.h  log.h  plugin-main.cpp  rec-core-placeholder.cpp  renderer.cpp  renderer.h  shared-state.h
tests/: click-probe.cpp  mock-server.h  test-commands.cpp  test-effects.cpp  test-framework.h  test-geometry.cpp  test-hypr-parse.cpp  test-sanity.cpp  test-sockets.cpp  test-zoom.cpp
